now using clarity UI

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.10",
     "@angular/router": "^5.2.0",
+    "@clr/angular": "^0.11.15",
+    "@clr/icons": "^0.11.15",
+    "@clr/ui": "^0.11.15",
     "@types/jquery": "^3.3.1",
     "@types/materialize-css": "^1.0.1",
     "@types/webpack": "^4.1.4",
